--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             .html(" Puissance: " + d.puissance + "<br>" +
                                 "Nb_voiture_vendu: " + d.nb_voiture + "<br>" +
                                 "Categorie: " + d.categorie + "<br>" +
-                                "Marque : " + d.marque + "<br>" +
+                                "Marque : " + d.marque + " " + d.nom "<br>" +
                                 "RejetsCO2 : " + d.RejetsCO2 + "<br>"+
                                 "BonusMalus : " + d.BonusMalus + "<br>"+
                                 "nbPortes : " + d.nbPortes + "<br>"+
